fixed clipping

--- a/less/daisywheel.less
+++ b/less/daisywheel.less
@@ -85,7 +85,7 @@
   #daisywheel-input-container {
     width: 640px;
     margin: 0 auto;
-    padding-bottom: 50px;
+    padding-bottom: 20px;
     padding-top: 35px;
 
     .border-radius(3px);
